csv files combined, cleaned and exported to single csv file

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "all_data = {}\n",
@@ -50,13 +50,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "outputs": [],
    "source": [
-    "clean_all_data = {}\n",
+    "clean_all_data = []\n",
     "for data in all_data:\n",
     "    df = all_data[data]\n",
-    "    clean_all_data[data] = df[df['sub_region_1'].isnull()]"
+    "    clean_all_data.append(df[df['sub_region_1'].isnull()])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [],
+   "source": [
+    "combined_data = pd.concat(clean_all_data)\n",
+    "combined_data.to_csv(\"data.csv\")"
    ],
    "metadata": {
     "collapsed": false,
