--- a/rapor.ipynb
+++ b/rapor.ipynb
@@ -46,10 +46,9 @@
     "1. Slovakya\n",
     "1. İspanya\n",
     "\n",
-    "&nbsp;\n",
-    "\n",
     "Bu ülkelerin hareketlilik verilerini Google üzerinden [1](https://www.gstatic.com/covid19/mobility/Region_Mobility_Report_CSVs.zip) vaka ve ölüm sayılarını ise WHO üzerinden [2](https://covid19.who.int/WHO-COVID-19-global-data.csv) 15.12.2021 tarihinde edindik. Google, hareketlilik verisini günlük olarak güncellenmediği için elimizdeki en son veriler 12.12.2021 tarihine ait. Verilerin büyüklüğü yüzünden veriyi internet üzerinden değil, bilgisayara kaydedilen dosyalar üzerinden almaya karar verdik.\n",
     "\n",
+    "Kapanma tarihlerini çeşitli kaynaklardan edindik. Kaynaklardaki bazı değerler tutarlı değildi, onları düzenledik. Örneğin tam tarih aldığımız kaynağın kaynağı olan haberde 30.11.2020 tarihine kadar kapanma olacaktır şeklinde geçerken aslında kastedilen son kapanma gününün 29.11.2020 tarihi olması. Fakat aldığımız kaynak bunu 30.11.2020 olarak almış. Kapanma tarihlerini edindiğimiz kaynakları kaynakça kısmında belirttik.\n",
     "\n",
     "Ülkeleri kıyasladığımız için Google verisinde ülkelerin bölgelerine (eyalet, il, ilçe vb.) ait olan verileri göz ardı ettik. Benzer şekilde sub_region_1, sub_region_2, metro_area, iso_3166_2_code, census_fips_code, place_id sütunlarını kaldırdık. WHO verisinden yeni vaka ve yeni ölüm değerlerini alıp ilgili ülkenin uygun tarihli satırına ekledik. 2020 ve 2021 verilerini Google amca ayrı verse de biz hem onu, hem de tüm ülkeleri tek DataFrame’de topladık.\n",
     "\n",
@@ -59,9 +58,18 @@
     "\n",
     "$$\\frac{avg\\_diff - min}{max - min}$$\n",
     "\n",
-    "Değerinin düşük olmasının tam kapanmada daha başarılı sonuç oluşturacak olan attribute'ler için ise normalize etmek için aşağıdaki formülü kullandık.\n",
+    "Değerinin düşük olmasının tam kapanmada daha başarılı sonuç oluşturacak olan attribute'ler için ise normalize etmek için aşağıdaki formülü kullandık. Ağırlıkları gösterirken bu değerleri negatif olarak belirttik.\n",
     "\n",
-    "$$\\frac{max - avg\\_diff}{max - min}$$\n",
+    "$$\\frac{max - avg\\_diff}{max - min}\n",
+    "$$&nbsp;\n",
+    "\n",
+    "Kendi verdiğimiz ağırlıklar ise şu şekilde:\n",
+    "+ Retail and recreation -%25\n",
+    "+ Grocery and pharmacy - %5\n",
+    "+ Parks -%10\n",
+    "+ Transit stations -%10\n",
+    "+ Workplaces -%20\n",
+    "+ Residential -%30\n",
     "\n",
     "Kapanmalardan önceki 2 ve sonraki 1 haftanın vaka değerlerinin ortalamasını alıp kapanma sonrasındaki değeri kapanma öncesindeki değere bölmek suretiyle Y değeri elde ettik.\n",
     "Elimizde her bir kapanma için X ve Y değeri oluştu. Bu X ve Y değerlerini classification için kullandık. Bu sayede kapanmalar sayesinde vaka sayılarını düşürüp başarılı olan ülkeler ile kapanma yapmasına rağmen vaka sayılarını düşürmede başarısız olan ülkeleri ayırt etmiş olduk.\n"
